--- a/pom.xml
+++ b/pom.xml
@@ -8,20 +8,36 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>tutorial Maven Webapp</name>
 	<url>http://maven.apache.org</url>
+	
+    <build>
+        <plugins>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-surefire-plugin</artifactId>
+			    <version>2.22.1</version>
+			    <configuration>
+			        <useSystemClassLoader>false</useSystemClassLoader>
+			    </configuration>
+			</plugin>
+        </plugins>
+        <finalName>tutorial</finalName>
+    </build>
+    
 	<dependencies>
+	
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
 			<scope>test</scope>
 		</dependency>
+		
 	</dependencies>
-	<build>
-		<finalName>tutorial</finalName>
-	</build>
+	
 </project>
