--- a/travis.yml
+++ b/travis.yml
@@ -1,9 +1,4 @@
 language: java
-sudo: false # faster builds
+jdk: oraclejdk8
 
-script: "mvn clean install"
 
-jdk:
-  - oraclejdk8
-  - oraclejdk9
-  - openjdk8
